Added the ``use_in`` argument to fields so you can exclude certain fields when retriving a list of resources vs a single resource.
* Applied patch described in https://github.com/toastdriven/django-tastypie/issues/526.
* Added the ability to make the ``use_in`` argument a callable
* Made ``use_in`` argument available to related fields
* Added the appropriate authors. Thanks to @funkybob for the original patch and @numan for the PR, enhancements, and tests.

--- a/AUTHORS
+++ b/AUTHORS
@@ -69,6 +69,7 @@ Contributors:
 * Jeremy Dunck (jdunck) for a patch adding an index to ``ApiKey``.
 * Wes Winham (winhamwr) for a documentation patch.
 * Andrew Austin (andrewaustin) for triaging, verifying and patching several tickets.
+* Numan Sachwani (numan) and Curtis Maloney (funkybob) for patch which allows fields to be omitted from list/detail form of resources.
 
 Thanks to Tav for providing validate_jsonp.py, placed in public domain.
 
