Add Andrew Austin to AUTHORS.
For his help in triaging verifying and patching several tickets.

--- a/AUTHORS
+++ b/AUTHORS
@@ -68,6 +68,7 @@ Contributors:
 * Mitar for compatability patches with django-tastypie-mongoengine
 * Jeremy Dunck (jdunck) for a patch adding an index to ``ApiKey``.
 * Wes Winham (winhamwr) for a documentation patch.
+* Andrew Austin (andrewaustin) for triaging, verifying and patching several tickets.
 
 Thanks to Tav for providing validate_jsonp.py, placed in public domain.
 
